# gpt-dungeon-master

./: .env.example  .gitignore  README.md  cc-srd5.md  docker-compose.yml  main.py  requirements.txt
.github/: dependabot.yml
.github/workflows/: build_test_pipeline.yml  (+3 more)
backend/: main.py
embeddings/: app.py  characters_facts.csv
frontend/: capacitor.config.ts  package-lock.json  package.json
iac/: .gitignore
rules-engine/: Dockerfile  README.md  config.py  main.py  rag_builder_Parent_BM25_without_CER.db  rag_builder_Semantic_BM25.db  rag_builder_Semantic_BM25_with_MD_splits.db  rag_builder_finetuning_k_with_4MD.db  requirements.txt  webserver.py
scripts/: message.md  new_rules.txt  new_rules_2.txt  output.md  output_2.md  transcribe.py  transcribe_async.py
services/creature-generation-service/: README.md  compose.yml  pyproject.toml
services/creature-generation-service/docs/adr/: squence.puml
services/creature-generation-service/src/creature_generation_service/: api.py  asset_generators.py  models.py  scheduler.py
services/creature-generation-service/src/creature_generation_service/image-generators/: flux.py
services/creature-generation-service/src/creature_generation_service/image_generators/: __init__.py  flux.py  openai.py
services/creature-generation-service/src/creature_generation_service/mesh_generators/: hunyuan3D.py  sparc3d_automation.py
src/: embeddings_test.py  non_player_character_generation.py  npc_generation.py  referee.py
tests/: test_npc_alignment_generation.py  test_npc_generation.py  test_npc_templates.py  test_referee.py
(+109 files in other folders)
