[project]
name = "creature-generation-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sverre Nystad", email = "sverrenystad@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "boto3>=1.43.0",
    "diffusers>=0.37.1",
    "fastapi[standard]>=0.136.1",
    "openai>=2.33.0",
    "pydantic>=2.13.3",
    "redis[hiredis]>=7.4.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "transformers>=5.7.0",
    "uuid>=1.30",
]

[project.scripts]
creature-generation-service = "creature_generation_service:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
